...
				android:layout_gravity="center"
				android:layout_margin="@dimen/spacing_large"
				android:visibility="gone"
				tools:visibility="visible" />

			<LinearLayout
				android:id="@+id/transfer_code_content"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<ScrollView
					android:layout_width="match_parent"
...
					android:gravity="center"
					android:orientation="vertical"
					android:outlineProvider="bounds"
					android:padding="@dimen/spacing_medium_large">

					<Button
						android:id="@+id/transfer_code_creation_done_button"
						style="@style/CovidCertificate.Button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/wallet_transfer_code_done_button" />

				</LinearLayout>
...
