...
			android:id="@+id/homescreen_header_not_empty"
			layout="@layout/item_header_not_empty"
			android:visibility="gone"
			app:layout_constraintTop_toTopOf="parent" />

		<androidx.viewpager2.widget.ViewPager2
			android:id="@+id/homescreen_certificates_view_pager"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="90dp"
			android:layout_marginBottom="@dimen/spacing_larger"
			android:clipChildren="false"
			android:clipToPadding="false"
...
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:elevation="@dimen/default_elevation" />
		</ScrollView>

		<ImageView
			android:id="@+id/homescreen_scan_button_small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|end"
			android:layout_marginEnd="@dimen/spacing_medium"
			android:layout_marginBottom="@dimen/spacing_larger"
			android:foreground="@drawable/ripple_rounded"
...
