...
					android:layout_marginHorizontal="@dimen/spacing_very_large"
					android:layout_marginTop="@dimen/spacing_large"
					android:gravity="center_horizontal"
					android:text="@string/wallet_transfer_code_onboarding_text" />

				<Button
					android:id="@+id/transfer_code_intro_create"
					style="@style/CovidCertificate.Button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="@dimen/spacing_very_large"
					android:text="@string/wallet_transfer_code_onboarding_button" />
...
