...
			app:drawableStartCompat="@drawable/ic_pdf"
			app:drawableTint="@color/blue" />

	</LinearLayout>

	<TextView
		android:id="@+id/option_transfer_code"
		style="@style/CovidCertificate.Text.Bold.Emphasized"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_medium_small"
		android:background="@drawable/bg_add_certificate_option"
		android:paddingHorizontal="@dimen/spacing_large"
...
